Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21415

Options | Debugger | General | Behavior | "Switch to previous mode on debugger exit" no longer works

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.8.1
    • Qt Creator 4.7.2, Qt Creator 4.8.0-beta1, Qt Creator 4.8.0
    • Debugger
    • None
    • Windows
    • 867befc5aed42f9b3e57231e14a6a0aa430c5591

      Reproduce: have a QtQuick app project open, set the current mode to Edit, start debugging, wait till the app starts normally, close it in a usual manner, see the “Debugging has finished” message in the Application Output panel.

      Expected: the Edit mode is restored, the debug-specific panels hidden.

      Actual: the Debug mode remains, debugger panels (Breakpoints, Call stack, Locals, etc) are still shown.

      Note: it works as expected in version 4.7.0.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            hart Khamidullin, Ruslan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes