src/plugins/debugger/enginemanager.cpp
@@ -421,6 +421,18 @@ void EngineManager::activateDebugMode()
     }
 }
 
+void EngineManager::deactivateDebugMode()
+{
+    if (ModeManager::currentModeId() == Constants::MODE_DEBUG && d->m_previousMode.isValid()) {
+        // If stopping the application also makes Qt Creator active (as the
+        // "previously active application"), doing the switch synchronously
+        // leads to funny effects with floating dock widgets
+        const Core::Id mode = d->m_previousMode;
+        QTimer::singleShot(0, d, [mode]() { ModeManager::activateMode(mode); });
+        d->m_previousMode = Id();
+    }
+}
+
 bool EngineManager::isLastOf(const QString &type)
 {
     int count = 0;
